fix: add missing padding around "no results" after filtering data

--- a/packages/multiple-select-vanilla/src/styles/_variables.scss
+++ b/packages/multiple-select-vanilla/src/styles/_variables.scss
@@ -82,6 +82,7 @@ $ms-loading-gap: 4px !default;
 $ms-loading-icon-size: 1.15em !default;
 $ms-loading-padding: 0.6rem 8px !default;
 $ms-loading-spin-animation: 1.5s infinite linear !default;
+$ms-no-results-padding: 0.6rem 8px !default;
 $ms-option-highlight-bg-color: rgba($ms-primary-color, 8%) !default;
 $ms-ok-button-bg-color: #fff !default;
 $ms-ok-button-bg-hover-color: #f9f9f9 !default;
